# google-automation-mcp

./: .env.example  .gitignore  CHANGELOG.md  GEMINI.md  Jenkinsfile  README.md  docs  gemini-extension.json  pyproject.toml  roadmap.md
.github/workflows/: lint.yml  release.yml  security.yml  test.yml
src/appscript_mcp/: __init__.py  auth.py  cli.py  server.py  setup.py  tools.py
src/appscript_mcp/auth/: __init__.py  clasp.py  credential_store.py  google_auth.py  oauth_config.py  scopes.py  service_adapter.py
src/appscript_mcp/core/: __init__.py
src/google_automation_mcp/: __init__.py  appscript_tools.py  cli.py  server.py  server_workspace.py  setup.py
src/google_automation_mcp/auth/: __init__.py  clasp.py  credential_store.py  google_auth.py  oauth_config.py  scopes.py  service_adapter.py
src/google_automation_mcp/core/: __init__.py  context.py
src/google_automation_mcp/router/: __init__.py  client.py  deployer.py  manifest.json  script_template.js
src/google_automation_mcp/tools/: __init__.py  calendar.py  calendar_router.py  docs.py  docs_router.py  drive.py  drive_router.py  error_handler.py  forms.py  forms_router.py  gmail.py  gmail_router.py  sheets.py  sheets_router.py  tasks.py  tasks_router.py
tests/: __init__.py  test_auth.py  test_calendar.py  test_calendar_router.py  test_docs.py  test_docs_router.py  test_drive.py  test_drive_router.py  test_forms.py  test_forms_router.py  test_gmail.py  test_gmail_router.py  test_router.py  test_sheets.py  test_sheets_router.py  test_tasks.py  test_tasks_router.py  test_tools.py  test_workspace_tools.py
