[project]
name = "google-automation-mcp"
version = "0.6.0"
description = "Headless Google Workspace automation for AI - Apps Script, Gmail, Drive, Sheets, Calendar, Docs, Tasks, Forms"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["mcp", "google", "apps-script", "automation", "workspace", "gmail", "drive", "sheets", "calendar", "tasks", "forms", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=2.0.0",
    "google-api-python-client>=2.160.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth>=2.38.0",
    "PyJWT>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=6.0.0",
]

[project.scripts]
google-automation-mcp = "google_automation_mcp.cli:main"
gmcp = "google_automation_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["docs", "tmp", "dxt"]

[tool.hatch.build.targets.wheel]
packages = ["src/google_automation_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/google_automation_mcp"]
omit = [
    "src/google_automation_mcp/cli.py",
    "src/google_automation_mcp/setup.py",
    "src/google_automation_mcp/server*.py",
    "src/google_automation_mcp/appscript_tools.py",
    "src/google_automation_mcp/tools/drive.py",
    "src/google_automation_mcp/tools/gmail.py",
    "src/google_automation_mcp/tools/sheets.py",
    "src/google_automation_mcp/tools/calendar.py",
    "src/google_automation_mcp/tools/docs.py",
    "src/google_automation_mcp/tools/tasks.py",
    "src/google_automation_mcp/tools/forms.py",
    "src/google_automation_mcp/auth/clasp.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.$$",
]

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]
